# errbot-backend-webapp

./: .editorconfig  .travis.yml  MANIFEST.in  Makefile  README.rst  package.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  webapp.plug  webapp.py
errbot_backend_webapp/: __init__.py  config.py  server.py  webapp.py
errbot_backend_webapp/commands/: webapp_commands.plug  webapp_commands.py
errbot_backend_webapp/resources/: index.html
errbot_backend_webapp/resources/static/: app.css  app.js
errbot_webapp_backend/: __init__.py
resources/: index.html
src/: app.js  index.html
src/components/: AppContainer.jsx  CommandInput.jsx  RecvLog.jsx  SendLog.jsx
tests/: test_config.py
views/: index.html
views/components/: AppContainer.jsx  CommandInput.jsx  LogHistory.jsx  SendLog.jsx
