[metadata]
name = errbot-webapp-backend
version = attr:errbot_webapp_backend.__version__
author = Kazuya Takei
author_email = attakei@gmail.com
description = Webapp backend plugin for Errbot
long_description = file:README.rst
url = https://github.com/attakei/errbot-webapp-backend
license_files = LICENSE
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat

[options]
install_requires = Sanic
packages = find:
include_package_data = True

[options.package_data]
errbot_webapp_backend = *.plug resoures/*

[bdist_wheel]
universal=1
