[metadata]
name = errbot-backend-webapp
version = attr:errbot_backend_webapp.__version__
author = Kazuya Takei
author_email = attakei@gmail.com
description = Webapp backend plugin for Errbot
long_description = file:README.rst
url = https://github.com/attakei/errbot-backend-webapp
license_files = LICENSE
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat

[options]
install_requires =
    Sanic
    Jinja2
packages = find:
include_package_data = True

[options.package_data]
errbot_backend_webapp = *.plug resoures/*

[bdist_wheel]
universal=1

[tool:pytest]
addopts = -p no:warnings

python_paths = .
